--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -244,7 +244,21 @@
           width: 95%
         &_input
           width: 100%
-          margin-bottom: 0      
+          margin-bottom: 0
+  .modal-succes 
+    &__block
+      text-align: center
+      height: 175px
+      width: 350px
+      &-close 
+        top: 5px
+        right: 5px
+      &-title
+        margin-top: 50px
+        font-size: 35px
+      &-text
+        margin-top: 10px
+        font-size: 25px
 @media (max-width: 576px)
   .container
     width: 470px
@@ -541,6 +555,21 @@
   .footer-feedback
     &__block
       width: 100%
+  .modal-succes 
+    &__block
+      text-align: center
+      height: 145px
+      width: 290px
+      &-close 
+        top: 5px
+        right: 5px
+        font-size: 13px
+      &-title
+        margin-top: 40px
+        font-size: 30px
+      &-text
+        margin-top: 10px
+        font-size: 20px
 @media (max-width: 320px)
   .container
     width: 290px
