--- a/css/style.css
+++ b/css/style.css
@@ -564,8 +564,17 @@ template {
   line-height: 35px;
 }
 
-.form-input_name {
-  margin-right: 30px;
+.form__inputs {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .form-button {
@@ -628,8 +637,14 @@ template {
   border-radius: 50%;
 }
 
-.input {
+.test {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   margin-bottom: 30px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .portfolio {
@@ -964,6 +979,11 @@ template {
   margin-bottom: 42px;
 }
 
+.modal__block-feedback_inputs {
+  width: 85%;
+  margin: auto;
+}
+
 .modal__block-feedback_input {
   width: 370px;
   margin-bottom: 15px;
@@ -1088,14 +1108,24 @@ h1 {
   line-height: 45px;
 }
 
-label .error {
-  display: block;
-}
-
-@media (max-width: 1450px) {
+@media (max-width: 1570px) {
   .main img {
     -webkit-transform: scale(1.2);
             transform: scale(1.2);
+  }
+}
+
+@media (max-width: 1400px) {
+  .main img {
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+  }
+}
+
+@media (max-width: 1300px) {
+  .main img {
+    -webkit-transform: scale(1);
+            transform: scale(1);
   }
 }
 
@@ -1106,8 +1136,6 @@ label .error {
   .main img {
     -webkit-transform-origin: top left;
             transform-origin: top left;
-    -webkit-transform: scale(1.1);
-            transform: scale(1.1);
     z-index: 2;
     position: relative;
   }
@@ -1125,13 +1153,6 @@ label .error {
   }
   .modal__block-feedback {
     width: 470px;
-  }
-}
-
-@media (max-width: 1100px) {
-  .main img {
-    -webkit-transform: scale(1);
-            transform: scale(1);
   }
 }
 
@@ -1267,6 +1288,9 @@ label .error {
   .modal__block-feedback_title {
     margin-bottom: 20px;
     line-height: 28px;
+  }
+  .modal__block-feedback_inputs {
+    width: 100%;
   }
   .modal__block-feedback_input {
     width: 340px;
@@ -1498,6 +1522,9 @@ label .error {
     margin-bottom: 20px;
     font-size: 15px;
   }
+  .form__inputs {
+    margin-bottom: 10px;
+  }
   .form-button {
     width: 100%;
     margin-bottom: 15px;
@@ -1521,7 +1548,7 @@ label .error {
   }
   .input {
     width: 218px;
-    margin-bottom: 22px;
+    margin-bottom: 10px;
     padding: 15px 0 15px 25px;
     border-radius: 7px;
   }
@@ -1683,6 +1710,10 @@ label .error {
   }
   .form-call_phone:before {
     display: none;
+  }
+  .test {
+    display: block;
+    margin-bottom: 10px;
   }
   .input {
     width: 320px;
