--- a/sass/_feedback.sass
+++ b/sass/_feedback.sass
@@ -25,8 +25,10 @@
     margin-bottom: 42px
     font-size: 16px
     line-height: 35px
-  &-input_name
-      margin-right: 30px
+  &__inputs
+    display: flex
+    flex-direction: column
+    align-items: center
   &-button
     margin-bottom: 25px
     width: 100%
@@ -66,7 +68,9 @@
         height: 40px
         border: 2px solid $phone-color
         border-radius: 50%
-.input
+.test
+  display: flex
   margin-bottom: 30px
+  justify-content: space-between
 
 
