--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,14 +1,21 @@
-@media (max-width: 1450px)
+@media (max-width: 1570px)
   .main
     img
       transform: scale(1.2)
+@media (max-width: 1400px)
+  .main
+    img
+      transform: scale(1.1)
+@media (max-width: 1300px)
+  .main
+    img
+      transform: scale(1)        
 @media (max-width: 1200px)
   .container
     width: 970px
   .main
     img
       transform-origin: top left
-      transform: scale(1.1)
       z-index: 2
       position: relative
   .feedback
@@ -23,10 +30,6 @@
         width: 500px
       &-feedback
         width: 470px
-@media (max-width: 1100px)
-  .main
-    img
-      transform: scale(1)
 @media (max-width: 1000px)
   .footer-feedback
     background: url("../img/footer-feedback/bg-footer_feedback.png") no-repeat center 100%
@@ -123,6 +126,8 @@
         &_title
           margin-bottom: 20px
           line-height: 28px
+        &_inputs
+          width: 100%
         &_input
           width: 340px
           padding: 22px
@@ -299,6 +304,8 @@
     &__subtitle
       margin-bottom: 20px  
       font-size: 15px
+    &__inputs
+      margin-bottom: 10px
     &-button 
       width: 100%
       margin-bottom: 15px
@@ -320,7 +327,7 @@
           height: 33px
   .input
     width: 218px
-    margin-bottom: 22px
+    margin-bottom: 10px
     padding: 15px 0 15px 25px
     border-radius: 7px
   .portfolio
@@ -447,6 +454,9 @@
           font-size: 16px
         &:before
           display: none
+  .test
+    display: block
+    margin-bottom: 10px
   .input
     width: 320px
     padding: 17px 0
