--- a/sass/_modal.sass
+++ b/sass/_modal.sass
@@ -83,6 +83,9 @@
         font-size: 16px
         line-height: 35px
         margin-bottom: 42px
+      &_inputs
+        width: 85%
+        margin: auto
       &_input
         width: 370px
         margin-bottom: 15px
