--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -433,6 +433,9 @@
       &__text
       font-size: 15px
   .form
+    &__inputs-wrap
+      display: block
+      margin-bottom: 10px
     &-input_name
       margin-right: 0
     &-button 
@@ -458,9 +461,6 @@
           font-size: 16px
         &:before
           display: none
-  .test
-    display: block
-    margin-bottom: 10px
   .input
     width: 320px
     padding: 17px 0
