--- a/sass/_feedback.sass
+++ b/sass/_feedback.sass
@@ -29,6 +29,10 @@
     display: flex
     flex-direction: column
     align-items: center
+    &-wrap 
+      display: flex
+      margin-bottom: 30px
+      justify-content: space-between
   &-button
     margin-bottom: 25px
     width: 100%
@@ -68,9 +72,5 @@
         height: 40px
         border: 2px solid $phone-color
         border-radius: 50%
-.test
-  display: flex
-  margin-bottom: 30px
-  justify-content: space-between
 
 
