--- a/sass/_footer-feedback.sass
+++ b/sass/_footer-feedback.sass
@@ -90,6 +90,7 @@
       &_input
         width: 100%
         margin-bottom: 0
+        text-align: center
         &:nth-child(1)
           margin-bottom: 16px
       &_button
