--- a/sass/style.sass
+++ b/sass/style.sass
@@ -7,6 +7,9 @@
 @import "main"
 @import "feedback"
 @import "portfolio"
+@import "price"
+@import "stages"
+@import "advantages"
 @import "footer-feedback"
 @import "modal"
 @import "modal-succes"
