--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -34,6 +34,13 @@
         width: 500px
       &-feedback
         width: 470px
+  .portfolio
+    &:before
+      width: 35%
+  .stage
+    &-block
+      &_text
+        font-size: 13px
 @media (max-width: 1000px)
   .footer-feedback
     background: url("../img/footer-feedback/bg-footer_feedback.png") no-repeat center 100%
@@ -145,6 +152,8 @@
           font-size: 22px
   .portfolio
     padding: 80px 0
+    &:before
+      width: 0
   .owl-carousel
     margin-top: 70px
   .middle
@@ -153,6 +162,25 @@
       font-size: 27px
       +bold
       line-height: 45px
+  .price
+    &-block 
+      width: 345px
+      height: 400px
+  .stages
+    padding: 0 0 50px 0
+    &__description
+      margin-top: 20px
+      margin-bottom: 25px
+  .stage
+    &-block
+      max-width: 130px
+      &__arrow
+        display: none
+      &_img
+        width: 80px
+        height: 80px
+      &_text
+        font-size: 12px
 @media (max-width: 780px)
   .modal
     &__block
@@ -268,6 +296,33 @@
       &-text
         margin-top: 10px
         font-size: 25px
+  .middle
+    &-title
+      br 
+        display: none
+  .price
+    padding: 50px 0
+    &-block
+      margin: auto
+      margin-bottom: 20px
+      &:nth-child(-n+3)
+        margin-bottom: 20px
+  .stages
+    &-wrap
+      flex-direction: row
+      flex-wrap: wrap
+    &__description
+      font-size: 18px
+  .stage
+    &-block
+      min-width: 150px
+      margin-bottom: 20px
+      &_img
+        margin-bottom: 15px
+  .advantages
+    &-text
+      br
+        display: none
 @media (max-width: 576px)
   .container
     width: 470px
@@ -282,7 +337,7 @@
         &_tel
           font-size: 16px
   .button
-    padding: 14px 25px 14px 25px
+    padding: 10px 20px 
   .main
     &-text
       margin: auto
@@ -401,6 +456,13 @@
           width: 100%
           padding: 16px 0
           margin: auto
+  .middle
+    &-title
+      font-size: 25px
+  .advantages
+    padding: 50px 0
+    &-text
+      font-size: 24px 
 @media (max-width: 540px)
    .footer-feedback
     &:before
@@ -479,8 +541,10 @@
     margin-top: 30px
   .middle
     &-title
-      font-size: 22px
+      font-size: 20px
       line-height: 25px
+      br
+        display: none
   .footer-feedback
     &:before
       height: 51%
@@ -501,6 +565,15 @@
           padding: 16px 0
           margin: auto
           margin-bottom: 15px
+  .price
+    &-block
+      width: 310px
+      height: 370px
+  .advantages
+    padding: 50px 0
+    &-text
+      font-size: 16px
+      +bold
 @media (max-width: 450px)
   .modal
     &__block
@@ -584,6 +657,11 @@
       &-text
         margin-top: 10px
         font-size: 20px
+@media (max-width: 380px)
+  .price
+    &-block
+      width: 280px
+      height: 340px
 @media (max-width: 320px)
   .container
     width: 290px
@@ -685,8 +763,10 @@
           border-radius: 5px
   .middle
     &-title
-      font-size: 19px
+      font-size: 18px
       line-height: 25px
+      br
+        display: none
   .footer-feedback
     &:before
       height: 58%
@@ -706,9 +786,13 @@
         &_subtitle
           font-size: 14px
           margin-bottom: 10px
+        &_input
+          width: 95%
         &_button
+          width: 95%
           font-size: 16px
         &_description
           font-size: 14px
+        
 
         
