--- a/sass/_portfolio.sass
+++ b/sass/_portfolio.sass
@@ -1,7 +1,17 @@
 .portfolio
   padding: 100px 0
-  background-color: #f5f5f5
   background-image: url("../img/portfolio/bgc.png")
+  z-index: 1
+  position: relative
+  &:before
+    content: ''
+    right: 0
+    top: 0
+    height: 100%
+    width: 45%
+    position: absolute
+    z-index: -1
+    background-color: #f5f5f5
 .owl-carousel
   margin-top: 92px
   button
