--- a/sass/_advantages.sass
+++ b/sass/_advantages.sass
@@ -1,6 +1,6 @@
 .advantages
   padding: 100px 0
-  background-color: $primary-color
+  background-color: $primary-color_dark
   &-text
     margin: auto
     text-align: center
