--- a/sass/_footer-feedback.sass
+++ b/sass/_footer-feedback.sass
@@ -10,7 +10,7 @@
     top: 0
     width: 56%
     height: 100%
-    background-color: $primary-color
+    background-color: $primary-color-dark
     position: absolute
     z-index: -1
   &__wrap
@@ -87,6 +87,8 @@
         margin: auto
         margin-bottom: 32px
         width: 370px
+        padding-left: 0
+        padding-right: 0
       &_input
         width: 100%
         margin-bottom: 0
