--- a/css/style.css
+++ b/css/style.css
@@ -855,7 +855,7 @@ template {
 
 .advantages {
   padding: 100px 0;
-  background-color: #ffd200;
+  background-color: #ffc000;
 }
 
 .advantages-text {
@@ -879,7 +879,7 @@ template {
   top: 0;
   width: 56%;
   height: 100%;
-  background-color: #ffd200;
+  background-color: #ffc000;
   position: absolute;
   z-index: -1;
 }
@@ -1004,6 +1004,8 @@ template {
   margin: auto;
   margin-bottom: 32px;
   width: 370px;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 .footer-feedback__block-form_input {
