--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -97,6 +97,9 @@
           margin: auto
           margin-bottom: 32px
           width: 95%
+        &_input
+          text-align: center
+          padding-left: 0
         &_button
           width: 95%
   .footer
