--- a/sass/style.sass
+++ b/sass/style.sass
@@ -10,6 +10,8 @@
 @import "price"
 @import "stages"
 @import "advantages"
+@import "services"
+@import "guarantees"
 @import "footer-feedback"
 @import "footer"
 @import "modal"
