--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -49,6 +49,22 @@
   .footer
     &-wrap
       padding-left: 56.8px
+  .services
+    &-block
+      width: 300px
+      height: 370px
+      &_text
+        position: relative
+        left: auto
+        top: auto
+        margin: auto
+        margin-top: 15px
+        width: 272px
+  .guarantees
+    &-wrap
+      justify-content: space-around
+    &-block
+      margin: 0 auto
 @media (max-width: 1000px)
   .footer-feedback
     background: url("../img/footer-feedback/bg-footer_feedback.png") no-repeat center 100%
@@ -203,6 +219,28 @@
         height: 80px
       &_text
         font-size: 12px
+  .services
+    padding: 75px 0
+    &-block
+      width: 230px
+      height: 300px
+      &_text
+        width: 205px
+  .guarantees
+    padding: 0
+    &-wrap
+      padding: 50px 0
+    &-block
+      width: 216px
+      margin-bottom: 20px
+      &_img
+        width: 100%
+        height: 301px
+        margin-bottom: 10px
+      &_text
+        width: 107%
+        font-size: 15px
+        line-height: 22px      
 @media (max-width: 780px)
   .modal
     &__block
@@ -348,6 +386,27 @@
     &-text
       br
         display: none
+  .services
+    padding: 50px 0 20px 0
+    &-wrap
+      justify-content: space-around
+      flex-flow: wrap
+    &-block
+      width: 230px
+      height: 300px
+      margin-bottom: 20px
+      &_text
+        width: 205px
+  .guarantees
+    &-wrap
+      justify-content: space-around
+      flex-flow: wrap-reverse
+    &-block
+      width: 216px
+      &:nth-child(1)
+        order: 1
+      &_img
+      &_text
 @media (max-width: 576px)
   .container
     width: 470px
@@ -487,7 +546,10 @@
   .advantages
     padding: 50px 0
     &-text
-      font-size: 24px 
+      font-size: 24px
+  .services
+    &-wrap
+      justify-content: space-around
 @media (max-width: 540px)
    .footer-feedback
     &:before
