--- a/css/style.css
+++ b/css/style.css
@@ -480,7 +480,7 @@ template {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-bottom: 28px;
+  margin-bottom: 32px;
 }
 
 .main-advantages__text {
@@ -707,7 +707,7 @@ template {
 
 .price-description {
   font-size: 20px;
-  margin-top: 58px;
+  margin-top: 50px;
   margin-bottom: 59px;
 }
 
@@ -745,7 +745,7 @@ template {
 
 .price-block__img {
   position: relative;
-  margin-bottom: 39px;
+  margin-bottom: 35px;
 }
 
 .price-block__img:before {
@@ -794,12 +794,12 @@ template {
 
 .stages {
   text-align: center;
-  padding-top: 60px;
-  padding-bottom: 100px;
+  padding-top: 52px;
+  padding-bottom: 91px;
 }
 
 .stages__description {
-  margin-top: 60px;
+  margin-top: 48px;
   margin-bottom: 70px;
   font-size: 20px;
 }
@@ -854,7 +854,7 @@ template {
 }
 
 .advantages {
-  padding: 100px 0;
+  padding: 90px 0;
   background-color: #ffc000;
 }
 
@@ -905,15 +905,17 @@ template {
 }
 
 .guarantees {
-  padding: 25px 0 100px 0;
+  padding: 34px 0 227px 0;
 }
 
 .guarantees-wrap {
-  padding-top: 100px;
+  padding-top: 91px;
   text-align: center;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 .guarantees-block {
@@ -928,7 +930,7 @@ template {
       -ms-flex-align: center;
           align-items: center;
   width: 289px;
-  margin: 0 50px;
+  margin: 0;
 }
 
 .guarantees-block_img {
@@ -945,7 +947,7 @@ template {
   height: 360px;
   border: 20px solid #f5f5f5;
   background-color: #ffffff;
-  margin-bottom: 40px;
+  margin-bottom: 36px;
 }
 
 .guarantees-block_img img {
@@ -1139,7 +1141,7 @@ template {
 }
 
 .footer-wrap {
-  padding-top: 100px;
+  padding-top: 95px;
   padding-left: 134px;
   -ms-flex-preferred-size: 44%;
       flex-basis: 44%;
@@ -1148,23 +1150,26 @@ template {
 .footer__title {
   font-size: 22px;
   font-family: "Museo Sans Bold", sans-serif;
+  margin-bottom: 3px;
 }
 
 .footer__subtitle {
-  font-size: 24px;
-  line-height: 45px;
+  font-size: 22px;
+  line-height: 34px;
   font-family: "Museo Sans Bold", sans-serif;
-  margin-bottom: 100px;
+  margin-bottom: 92px;
 }
 
 .footer__info {
   width: 191px;
   position: relative;
-  padding-left: 45px;
-  margin-bottom: 40px;
+  padding-left: 41px;
+  margin-bottom: 35px;
 }
 
 .footer__info_bold {
+  line-height: 24px;
+  padding-top: 6px;
   display: block;
   font-family: "Museo Sans Bold", sans-serif;
   color: #333333;
