--- a/sass/_guarantees.sass
+++ b/sass/_guarantees.sass
@@ -1,15 +1,16 @@
 .guarantees
-  padding: 25px 0 100px 0
+  padding: 34px 0 227px 0
   &-wrap
-    padding-top: 100px
+    padding-top: 91px
     text-align: center
     display: flex
+    justify-content: space-around
   &-block
     display: flex
     flex-direction: column
     align-items: center
     width: 289px
-    margin: 0 50px
+    margin: 0
     &_img
       display: flex
       align-items: center
@@ -18,7 +19,7 @@
       height: 360px
       border: 20px solid #f5f5f5
       background-color: #ffffff
-      margin-bottom: 40px
+      margin-bottom: 36px
       img
         cursor: pointer
     &_text
