--- a/sass/style.sass
+++ b/sass/style.sass
@@ -25,6 +25,9 @@ body
   font-family: "Museo Sans Light", sans-serif
   color: $font-color
   overflow-x: hidden
+ul 
+  padding: 0
+  margin: 0
 .container
   width: 1170px
   margin: auto  
