--- a/css/style.css
+++ b/css/style.css
@@ -1437,6 +1437,11 @@ body {
   overflow-x: hidden;
 }
 
+ul {
+  padding: 0;
+  margin: 0;
+}
+
 .container {
   width: 1170px;
   margin: auto;
@@ -1650,6 +1655,10 @@ h1 {
             flex-direction: column;
     margin: auto;
   }
+  .main-advantages {
+    margin: auto;
+    margin-top: 20px;
+  }
   .main-text__title {
     text-align: center;
   }
@@ -1662,6 +1671,12 @@ h1 {
   }
   .form {
     margin: auto;
+  }
+  .form__title {
+    text-align: center;
+  }
+  .form__subtitle {
+    text-align: center;
   }
   .modal__block {
     height: 580px;
@@ -1789,6 +1804,9 @@ h1 {
     font-size: 15px;
     line-height: 22px;
   }
+  .advantages {
+    padding: 50px;
+  }
 }
 
 @media (max-width: 780px) {
@@ -1889,7 +1907,6 @@ h1 {
     font-size: 18px;
   }
   .main-advantages {
-    margin: auto;
     margin-top: 20px;
   }
   .main-advantages__item {
@@ -2029,11 +2046,11 @@ h1 {
     font-size: 16px;
   }
   .button {
-    padding: 10px 20px;
+    padding: 15px 20px;
   }
   .main-text {
     margin: auto;
-    margin-top: 40px;
+    margin-top: 25px;
     width: 400px;
   }
   .main-text__title {
@@ -2064,6 +2081,9 @@ h1 {
   }
   .form__inputs {
     margin-bottom: 10px;
+  }
+  .form__inputs-wrap {
+    margin-bottom: 0;
   }
   .form-button {
     width: 100%;
@@ -2178,7 +2198,7 @@ h1 {
     font-size: 25px;
   }
   .advantages {
-    padding: 50px 0;
+    padding: 30px 0;
   }
   .advantages-text {
     font-size: 24px;
@@ -2186,6 +2206,9 @@ h1 {
   .services-wrap {
     -ms-flex-pack: distribute;
         justify-content: space-around;
+  }
+  .footer-wrap {
+    padding: 40px 0 0 0;
   }
 }
 
@@ -2206,17 +2229,20 @@ h1 {
     padding: 2px 0;
   }
   .header img {
-    height: 45px;
+    height: 44px;
   }
   .header-text__contacts {
     margin-right: 10px;
   }
   .header-text__contacts_geo {
-    font-size: 9px;
+    font-size: 10px;
     margin-bottom: 0;
   }
   .header-text__contacts_tel {
-    font-size: 9px;
+    font-size: 10px;
+  }
+  .button {
+    padding: 10px 15px;
   }
   .main-text {
     width: 100%;
@@ -2319,12 +2345,16 @@ h1 {
     width: 310px;
     height: 370px;
   }
+  .stages {
+    padding-bottom: 0;
+  }
   .advantages {
-    padding: 50px 0;
+    padding: 20px 0;
   }
   .advantages-text {
     font-size: 16px;
     font-family: "Museo Sans Bold", sans-serif;
+    line-height: 30px;
   }
   .footer-map {
     height: 300px;
@@ -2469,7 +2499,7 @@ h1 {
     padding: 2px 0;
   }
   .header img {
-    height: 45px;
+    height: 42px;
   }
   .header-text__contacts {
     margin-right: 10px;
