--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -136,6 +136,9 @@
     &-wrap 
       flex-direction: column
       margin: auto
+    &-advantages
+      margin: auto
+      margin-top: 20px
     &-text 
       &__title
         text-align: center
@@ -145,6 +148,10 @@
     background: #ffffff
   .form
     margin: auto
+    &__title
+      text-align: center
+    &__subtitle
+      text-align: center
   .modal
     &__block
       height: 580px
@@ -240,7 +247,9 @@
       &_text
         width: 107%
         font-size: 15px
-        line-height: 22px      
+        line-height: 22px
+  .advantages
+    padding: 50px  
 @media (max-width: 780px)
   .modal
     &__block
@@ -311,7 +320,6 @@
       &__add
         font-size: 18px
     &-advantages
-      margin: auto
       margin-top: 20px
       &__item
         margin-bottom: 20px
@@ -421,11 +429,11 @@
         &_tel
           font-size: 16px
   .button
-    padding: 10px 20px 
+    padding: 15px 20px 
   .main
     &-text
       margin: auto
-      margin-top: 40px
+      margin-top: 25px
       width: 400px
       &__title 
         font-size: 30px
@@ -449,6 +457,8 @@
       font-size: 15px
     &__inputs
       margin-bottom: 10px
+      &-wrap
+        margin-bottom: 0
     &-button 
       width: 100%
       margin-bottom: 15px
@@ -544,12 +554,15 @@
     &-title
       font-size: 25px
   .advantages
-    padding: 50px 0
+    padding: 30px 0
     &-text
       font-size: 24px
   .services
     &-wrap
       justify-content: space-around
+  .footer
+    &-wrap
+      padding: 40px 0 0 0
 @media (max-width: 540px)
    .footer-feedback
     &:before
@@ -562,15 +575,17 @@
     &-container
       padding: 2px 0
     img 
-      height: 45px
+      height: 44px
     &-text 
       &__contacts
         margin-right: 10px
         &_geo
-          font-size: 9px
+          font-size: 10px
           margin-bottom: 0
         &_tel
-          font-size: 9px
+          font-size: 10px
+  .button
+    padding: 10px 15px
   .main
     &-text
       width: 100%
@@ -656,11 +671,14 @@
     &-block
       width: 310px
       height: 370px
+  .stages
+    padding-bottom: 0 
   .advantages
-    padding: 50px 0
+    padding: 20px 0
     &-text
       font-size: 16px
       +bold
+      line-height: 30px
   .footer
     &-map
       height: 300px
@@ -768,7 +786,7 @@
     &-container
       padding: 2px 0
     img 
-      height: 45px
+      height: 42px
     &-text 
       &__contacts
         margin-right: 10px
